--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "phpunit/phpunit": "^5.7"
   },
   "suggest": {
-    "ext-gmp": "Allows for arbitrary-length integers to be worked"
+    "ext-gmp": "Allows arbitrary-length integers to be worked"
   },
   "autoload": {
     "psr-4": {
