--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "php": "^7.0",
     "ext-gd": "*",
     "hashids/hashids": "^2.0",
+    "illuminate/support": "^5.3",
     "spatie/laravel-medialibrary": "^4.10",
     "symfony/http-foundation": "3.1.*"
   },
