--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     "php": "^7.0",
     "ext-gd": "*",
     "hashids/hashids": "^2.0",
-    "illuminate/support": "^5.3",
-    "spatie/laravel-medialibrary": "^4.10",
+    "illuminate/support": "5.3.*",
+    "spatie/laravel-medialibrary": "^4.13",
     "symfony/http-foundation": "3.1.*"
   },
   "require-dev": {
     "codeclimate/php-test-reporter": "^0.3",
-    "illuminate/filesystem": "^5.3",
-    "orchestra/testbench": "^3.3",
+    "illuminate/filesystem": "5.3.*",
+    "orchestra/testbench": "3.3.*",
     "phpunit/phpunit": "^5.7"
   },
   "suggest": {
