--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v1
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: dom, gd, mbstring, sqlite3
+          extensions: bcmath, dom, fileinfo, gd, mbstring, sqlite3
 
       - name: Install dependencies
         run: composer update --optimize-autoloader --prefer-dist --no-interaction --no-progress --no-suggest
